# ChangeLog for x11-base/xfree
# Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-base/xfree/ChangeLog,v 1.90 2003/02/05 11:30:21 azarah Exp $

  05 Feb 2003; Martin Schlemmer <azarah@gentoo.org> :

  Fix the /usr/lib/X11 symlink to point to the correct ../X11R6/lib/X11.
  Some ebuild had this still wrong.  This closes bug #15017.

  04 Feb 2003; Olivier Reisch <doctomoe@gentoo.org> xfree-4.2.99.4.ebuild :
  
  Temporarily set to -ppc as we had to mask the fontconfig dependency, which
  tends to break fonts on ppc unless you recompile everything depending on it.
  Still pondering what to do about it :)

  Later, same day, a bit wiser: set back to ~ppc, tell ppl to recompile qt
  and kdelibs.

*xfree-4.2.99.4 (02 Feb 2003)

  02 Feb 2003; Seemant Kulleen <seemant@gentoo.org> xfree-4.2.99.4.ebuild
  files/digest-xfree-4.2.99.4 files/4.2.99.4/* files/4.2.99.4-patches/* :

  Updated to newest cvs frozen branch (4_2_99_4) Same patches are still applying
  Also, this will be permanently ~arch masked and removed from package mask.

*xfree-4.2.99.3-r2 (16 Jan 2003)

  16 Jan 2002; Seemant Kulleen <seemant@gentoo.org> xfree-4.2.99.3-r2.ebuild
  files/digest-xfree-4.2.99.3-r2 files/4.2.99.3-r2/* :

  new ebuild for updated snapshot.  this seems to be frozen code for the
  X_4_2_99_3 branch.

*xfree-4.2.99.3-r1 (23 Dec 2002)

  24 Dec 2002; Martin Schlemmer <azarah@gentoo.org> xfree-4.2.1-r2.ebuild,
                                                    xfree-4.2.99.3-r1.ebuild :

  Do not let portage strip binaries and libraries, as then it stips the
  DRI modules, which breaks things.  Change 4.2.99.3-r1 to compile fontconfig,
  but then we just remove all fontconfig related stuff.  This should fix things
  for Seemant and others.

  23 Dec 2002; Martin Schlemmer <azarah@gentoo.org> xfree-4.2.1-r2.ebuild,
                                                    xfree-4.2.99.3-r1.ebuild :
