@@ -1,7 +1,11 @@
 # ChangeLog for x11-base/xfree
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-base/xfree/ChangeLog,v 1.90 2003/02/05 11:30:21 azarah Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-base/xfree/ChangeLog,v 1.91 2003/02/09 22:49:48 lu_zero Exp $
 
+  09 Feb 2003; Luca Barbato <lu_zero@gentoo.org> :
+
+  Added some warnings to avoid reports for already known issues.
+  
   05 Feb 2003; Martin Schlemmer <azarah@gentoo.org> :
 
   Fix the /usr/lib/X11 symlink to point to the correct ../X11R6/lib/X11.
